[package]
name = "jmd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
] }
anyhow = "1.0"
console = "0.15"
